<resources>
    <string name="app_name">L8 Again</string>
    <string name="late">Late</string>
    <string name="set">Set</string>
    <string name="on_time">On time!</string>
    <string name="snooze">Snooze</string>
    <string name="addMe">+</string>
    <string name="home">Home</string>
    <string name="viewing_weather_for_your_area">Viewing weather for your area</string>
    <string name="change_city">Change City</string>
    <string name="profile">Profile</string>
    <string name="alarms">Alarms</string>
    <string name="weather">Weather</string>
    <string name="welcome">Welcome!</string>
    <string name="your_overall_score">Your overall score</string>
    <string name="personalize_your_profile">Personalize your profile</string>
    <string name="save">Save</string>
    <string name="please_input_the_name_you_would_like_to_be_referred_to_as">Please input the name you would like to be referred to as:</string>
    <string name="please_enter_the_zip_code_you_would_like_to_get_the_weather_for">Please enter the Zip code you would like to get the weather for:</string>
    <string name="home_test">Home Test</string>
    <string name="okay">Okay</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="weds">Weds</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="on_or_off">On Or Off</string>
    <string name="save">Save</string>
</resources>
