<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.late.myapplication.controller.AlarmPickerActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameButtons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/background_dark"
            android:fadingEdge="none">

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/profile"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/framePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:fadingEdge="none">

            <TimePicker
                android:id="@+id/simpleTimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:amPmBackgroundColor="@color/colorAccent"
                android:amPmTextColor="#03A9F4"
                android:background="#2196F3"
                android:contextClickable="false"
                android:numbersBackgroundColor="#D4D5D6"
                android:numbersInnerTextColor="#D4D5D6"
                android:numbersSelectorColor="#D4D5D6"
                android:numbersTextColor="?attr/colorBackgroundFloating"
                android:padding="20dp"
                android:scrollbarThumbHorizontal="@android:color/background_light"
                android:scrollbarThumbVertical="@android:color/background_light"
                android:timePickerMode="spinner" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|fill_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="fill_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkMon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/background_light"
                    android:text="@string/mon"
                    android:textColor="@android:color/background_light" />

                <CheckBox
                    android:id="@+id/chkTues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/background_light"
                    android:text="@string/tues"
                    android:textColor="@android:color/background_light" />

                <CheckBox
                    android:id="@+id/chkWed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/background_light"
                    android:text="@string/weds"
                    android:textColor="@android:color/background_light" />

                <CheckBox
                    android:id="@+id/chkThur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/background_light"
                    android:text="@string/thurs"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkFri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/background_light"
                    android:text="@string/fri"
                    android:textColor="@android:color/background_light" />

                <CheckBox
                    android:id="@+id/chkSat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/background_light"
                    android:text="@string/sat"
                    android:textColor="@android:color/background_light" />

                <CheckBox
                    android:id="@+id/chkSun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/background_light"
                    android:text="@string/sun"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>

            <Switch
                android:id="@+id/offSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_or_off" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>