<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/lateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="586dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/late"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/alarmsBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/alarmsBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="584dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:text="Alarms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lateBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="542dp"
        android:layout_marginBottom="25dp"
        android:max="@android:integer/config_longAnimTime"
        android:progress="@android:integer/config_shortAnimTime"
        android:progressTint="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/lateBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="407dp"
        android:layout_marginBottom="70dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/on_time"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/snoozeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="309dp"
        android:layout_marginBottom="50dp"
        android:background="#FF3700"
        android:text="@string/snooze"
        app:layout_constraintBottom_toTopOf="@+id/onTimeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateField"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/snoozeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

</android.support.constraint.ConstraintLayout>